--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,12 +28,5 @@ jobs:
           relative_project_path: ./
           archive_output: true
 
-        # This release action has worked well for me. However, you can most likely use any release action of your choosing.
-        # https://github.com/ncipollo/release-action
-      - name: create release
-        uses: ncipollo/release-action@v1.14.0
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          generateReleaseNotes: true
-          tag: "v${{ github.event.head_commit.message}}"
-          artifacts: ${{ steps.export.outputs.archive_directory }}/*
+      - name: Version generator
+        uses: lpenz/ghaction-version-gen@v0.14.0
