--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,5 +36,5 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: demo-${{ env.MAGIC_VERSION }}
-          path: dist
+          name: v-${{ env.MAGIC_VERSION }}
+          path: ${{ steps.export.outputs.archive_directory }}/*
